--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
 body {
+  background-image: url('background-img.png');
+  background-size:cover;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+.wrapper {
+  position: absolute;
+  margin: 250px 30%;
+  width: 600px;
+  height: 400px;
+  border: 2px solid #282825;
+  border-radius: 30px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.button {
+  background: rgb(135, 117, 117);
+}
+
+.done {
+  text-decoration: line-through;
+}
+
+.todo-list {
+  margin: 20px;
+  padding: 0;
+  width: 550px;
+}
+
+.form {
+  margin: 20px 20px;
+  background-color: antiquewhite;
+  opacity: 50%;
+}
+
+.li-list {
+      display: flex;
+      padding: 5px;
+      margin-bottom: 5px;
+      justify-content: space-between;
+      align-items: center;
+      border: 2px solid grey;
+      border-radius: 4px;
+}
+
+.text {
+  margin-left: 20px;
+  font-size: 20px;
 }
