--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,26 @@
 body {
-  background-image: url('background-img.png');
-  background-size:cover;
+  background-image: url("background-img-new.jpg");
+  background-repeat: no-repeat;
+  background-color: #ffefd5;
+  background-size: cover;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
 }
+
 .wrapper {
   position: absolute;
-  margin: 250px 30%;
   width: 600px;
   height: 400px;
+  margin: auto;
+  top: 20px;
+  left: 0;
+  bottom: 0;
+  right: 0;
   border: 2px solid #282825;
   border-radius: 30px;
+  overflow: auto;
 }
 
 .button {
@@ -36,13 +44,13 @@ body {
 }
 
 .li-list {
-      display: flex;
-      padding: 5px;
-      margin-bottom: 5px;
-      justify-content: space-between;
-      align-items: center;
-      border: 2px solid grey;
-      border-radius: 4px;
+  display: flex;
+  padding: 5px;
+  margin-bottom: 5px;
+  justify-content: space-between;
+  align-items: center;
+  border: 2px solid grey;
+  border-radius: 4px;
 }
 
 .text {
